pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__begins_with_block_quote.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
expression: "render_string_dumb(\"> Hello World\").unwrap()"
---
  Hello World
