pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__flush_ref_links_before_toplevel_heading.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
expression: "render_string_dumb(\"> Hello [World](http://example.com/world)\n\n> # No refs before this headline\n\n# But before this\").unwrap()"
---
  Hello World[1]


 No refs before this headline


[1]: http://example.com/world


 But before this
