pulldown-cmark-mdcat/src/snapshots/pulldown_cmark_mdcat__tests__layout__heading_levels.snap
---
source: pulldown-cmark-mdcat/src/lib.rs
expression: "render_string_dumb(\"\n# First\n\n## Second\n\n### Third\").unwrap()"
---

 First 


━━ Second

  ── Third
